# PortfolioAI_100x_MiniCapstone

./: .gitignore  LICENSE  README.md  requirements.txt  streamlit_app.py
backend/: README.md  pyproject.toml  requirements.txt  run.py  setup.py
backend/app/: config.py  main.py
backend/app/core/: security.py
backend/app/database/: __init__.py  config.py  crud.py  deps.py  init_db.py  models.py
backend/app/models/: __init__.py  portfolio.py  resume.py  user.py
backend/app/services/: __init__.py  cover_letter_generator.py  cv_generator.py  groq_client.py  optimizer.py  portfolio_builder.py  resume_parser.py  resume_processor.py  supabase_service.py
backend/app/utils/: __init__.py  auth.py  file_utils.py  scoring_rules.py
frontend/: app.py
frontend/src/components/sections/: header.py
frontend/src/pages/Auth/: auth.py  login_page.py  reset_password_page.py
frontend/src/pages/Home/: homepage.py  landing.py
frontend/src/pages/Portfolio/generators/: portfolio_generator.py  simple_portfolio_generator.py
frontend/src/pages/Resume/: resume_optimizer.py
frontend/src/pages/Resume/generators/: cover_letter_generator.py  cv_generator.py
frontend/src/services/: api.py
